--- a/src/5C_network/MainPage.css
+++ b/src/5C_network/MainPage.css
@@ -1,15 +1,22 @@
 body {
-  box-sizing: border-box;
-  margin: 0px;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.user-detail {
+.firstPageDiv {
   display: flex;
-  border: 1px solid grey;
-  border-radius: 15px;
-  width: fit-content;
-  padding: 15px;
-  gap: 15px;
+  gap: 18px;
+  font-size: 20px;
+  justify-content: center;
+}
+
+button {
+  border-radius: 6px;
+  border: none;
+  outline: none;
+  padding: 4px 18px;
 }
 
 .parent-repo {
@@ -17,4 +24,10 @@ body {
   grid-template-columns: 1fr 1fr;
   gap: 10px;
   margin: 30px;
+}
+
+.user-detail {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
 }
