--- a/src/5C_network/SingleRepo/SingleRepo.css
+++ b/src/5C_network/SingleRepo/SingleRepo.css
@@ -1,11 +1,13 @@
 .single-repo {
-  border: 1px solid black;
+  background-color: rgb(236, 236, 236);
   border-radius: 15px;
-  padding: 10px;
-  margin: 15px;
+  padding: 20px;
+  /* margin: 6px; */
+  text-decoration: none;
   display: flex;
+  color: black;
   gap: 15px;
-  width: 620px;
+  width: 580px;
 }
 
 .repo-description {
